--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,6 @@ repository = "https://github.com/fire-lib/fire-log-to-stdout"
 license = "MIT OR Apache-2.0"
 
 [features]
-log_time = ["chrono"]
+log_crate = []
 
 [dependencies]
-chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
